# alejandra

./: Cargo.toml  flake.nix
.config/: nextest.toml
.github/workflows/: bench.yml  build.yml  clippy.yml  test.yml
crates/alejandra/: Cargo.toml
crates/alejandra-cli/: Cargo.toml
crates/alejandra-core/: Cargo.toml
crates/alejandra-core/benches/: fmt.rs
crates/alejandra-core/benches/cases/: medium.nix
crates/alejandra-core/src/: children.rs  lib.rs  trivia.rs  utils.rs
crates/alejandra-core/src/rules/: apply.rs  bin_op.rs  dynamic.rs  if_else.rs  inherit.rs  list.rs  paren.rs  scoped.rs
crates/alejandra-core/tests/cases/inline-spacing/list/: out.nix
crates/alejandra/benches/cases/: large.nix
crates/alejandra/src/: builder.rs  config.rs  lib.rs
crates/alejandra/src/rules/: attr_set.rs
crates/alejandra/tests/: fmt.rs
crates/alejandra/tests/cases/inline-spacing/attr_set/: out.nix
crates/alejandra_cli/: Cargo.toml
crates/alejandra_cli/src/: cli.rs
crates/alejandra_cli/src/ads/: mod.rs
crates/alejandra_cli/tests/: output.txt
