[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "alejandra"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
rnix.workspace = true
rowan.workspace = true
serde.workspace = true

[target.aarch64-unknown-linux-musl.dependencies.mimalloc]
default-features = false
version = "0"

[target.arm-unknown-linux-musleabihf.dependencies.mimalloc]
default-features = false
version = "0"

[target.i686-unknown-linux-musl.dependencies.mimalloc]
default-features = false
version = "0"

[target.x86_64-unknown-linux-gnu.dependencies.mimalloc]
default-features = false
version = "0"

[target.x86_64-unknown-linux-musl.dependencies.mimalloc]
default-features = false
version = "0"

[dev-dependencies]
pretty_assertions = "1.3.0"
