[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "alejandra-cli"
readme.workspace = true
repository.workspace = true
version.workspace = true


[[bin]]
name = "alejandra"
path = "src/main.rs"

[dependencies]
alejandra = { path = "../alejandra" }
clap.workspace = true
futures.workspace = true
num_cpus.workspace = true
rand.workspace = true
toml.workspace = true
walkdir.workspace = true

[dev-dependencies]
pretty_assertions = "1.3.0"
